force-app/main/default/objects/Sprint__c/Sprint__c.object-meta.xml
<CustomObject>
    <description>CCS Agile Development Sprint Object</description>
    <label>Sprint</label>
    <nameField>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>