force-app/main/default/objects/Sprint__c/fields/Sprint_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Deployment_Date__c</fullName>
    <label>Deployment Date</label>
    <type>Date</type>
</CustomField>