force-app/main/default/objects/Sprint__c/fields/Sprint_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>