force-app/main/default/objects/Sprint__c/fields/Sprint_Plan_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Plan_Estimate__c</fullName>
    <label>Plan Estimate</label>
    <summarizedField>User_Story__c.US_Plan_Estimate__c</summarizedField>
    <summaryForeignKey>User_Story__c.US_Sprint__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>