force-app/main/default/objects/Sprint__c/fields/Sprint_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>