force-app/main/default/objects/Sprint__c/fields/Sprint_Stories__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Stories__c</fullName>
    <label>Sprint Stories</label>
    <summaryForeignKey>User_Story__c.US_Sprint__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>