force-app/main/default/objects/Sprint__c/fields/Sprint_Workstream__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Workstream__c</fullName>
    <label>Workstream</label>
    <referenceTo>Workstream__c</referenceTo>
    <relationshipLabel>Sprints</relationshipLabel>
    <relationshipName>Sprints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>