force-app/main/default/objects/Sprint__c/validationRules/Deployment_Past_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Deployment_Past_End</fullName>
    <active>true</active>
    <errorConditionFormula>Sprint_Deployment_Date__c &gt;  Sprint_End_Date__c</errorConditionFormula>
    <errorDisplayField>Sprint_Deployment_Date__c</errorDisplayField>
    <errorMessage>Deployment Date cannot be greater than the Sprint End Date</errorMessage>
</ValidationRule>