force-app/main/default/objects/Sprint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sprint_Workstream__c</columns>
    <columns>Sprint_Status__c</columns>
    <columns>Sprint_Start_Date__c</columns>
    <columns>Sprint_Stories__c</columns>
    <columns>Sprint_Plan_Estimate__c</columns>
    <columns>Sprint_Days_to_Completion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>CCS_Development_Team</group>
    </sharedTo>
</ListView>