force-app/main/default/objects/Sprint__c/listViews/CRM_Workstream.listView-meta.xml
<ListView>
    <fullName>CRM_Workstream</fullName>
    <columns>NAME</columns>
    <columns>Sprint_Workstream__c</columns>
    <columns>Sprint_Status__c</columns>
    <columns>Sprint_Start_Date__c</columns>
    <columns>Sprint_Stories__c</columns>
    <columns>Sprint_Plan_Estimate__c</columns>
    <columns>Sprint_Days_to_Completion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sprint_Workstream__c</field>
        <operation>equals</operation>
        <value>CRM Development</value>
    </filters>
    <label>CRM Workstream</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>