force-app/main/default/objects/Sprint__c/listViews/Phase_3_eCatalogue.listView-meta.xml
<ListView>
    <fullName>Phase_3_eCatalogue</fullName>
    <columns>NAME</columns>
    <columns>Sprint_Workstream__c</columns>
    <columns>Sprint_Status__c</columns>
    <columns>Sprint_Start_Date__c</columns>
    <columns>Sprint_Stories__c</columns>
    <columns>Sprint_Plan_Estimate__c</columns>
    <columns>Sprint_Days_to_Completion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sprint_Workstream__c</field>
        <operation>equals</operation>
        <value>DTP Phase 3 - eCatalogue</value>
    </filters>
    <label>Phase 3 - eCatalogue</label>
    <sharedTo>
        <group>CCS_Development_DTP_Phase_3_eCatalogue</group>
    </sharedTo>
</ListView>